--- a/configService/src/main/resources/application.properties
+++ b/configService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=configService
 
 spring.cloud.config.server.type=git
-spring.cloud.config.server.import=https://github.com/igdawo/tingeso_eva2
+spring.cloud.config.server.git.uri=https://github.com/igdawo/tingeso_eva2
 spring.cloud.config.server.default-label=main
 spring.cloud.config.server.search-paths=*
 
