--- a/eurekaService/src/main/resources/application.properties
+++ b/eurekaService/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=eurekaService
+spring.application.name=EurekaService
 spring.config.import=configserver:http://localhost:8888
